fix(data-table): add styles to ensure proper table layout with separate border-collapse and bottom border

--- a/packages/raystack/components/data-table/data-table.module.css
+++ b/packages/raystack/components/data-table/data-table.module.css
@@ -33,7 +33,7 @@
   min-width: 0;
 }
 
-.display-popover-properties-select > span {
+.display-popover-properties-select>span {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -81,6 +81,11 @@
 .contentRoot {
   height: 100%;
   overflow: auto;
+}
+
+.contentRoot table {
+  border-collapse: separate;
+  border-spacing: 0;
 }
 
 .row {
